--- a/src/include/header.html
+++ b/src/include/header.html
@@ -1,20 +1,37 @@
 <header>
 	<div class="header_top" id="home">
-		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-			<a class="navbar-brand" href="#"><img src="../../static/images/home_nav_logo.png" ></a>
+		<nav class="navbar navbar-expand-md navbar-dark">
+			<a class="navbar-brand" href="#"><img src="../static/images/home_nav_logo.png" ></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-				<span class="navbar-toggler-icon"></span>
+				<i class="iconfont icongengduo" style="color: #000;"></i>
 			</button>
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link " href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="#">Products</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="#">Brand</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+				<ul class="nav-icon cal-xs">
+					<li class="nav-icon-item">
+						<a href=""><img src="../static/images/home_nav_youtube.png" ></a>
+					</li>
+					<li class="nav-icon-item">
+						<a href=""><img src="../static/images/home_nav_facebook.png" ></a>
+					</li>
+					<li class="nav-icon-item">
+						<a href=""><img src="../static/images/home_nav_email.png" ></a>
+					</li>
+					<li class="nav-icon-item">
+						<a href=""><img src="../static/images/home_nav_phone.png" ></a>
 					</li>
 				</ul>
 			</div>
