--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -68,107 +68,58 @@ label {
 	overflow: hidden;
 }
 /*--/header --*/
-.bg-light {
-	background: none !important;
-}
-
-.bg-faded {
-	background-color: #fff;
-	padding: 1.1em 1em;
-}
-
-ul.navbar-nav li {
-	margin: 0 6px;
-}
-
-a.navbar-brand {
-	font-size: 2em;
-	font-weight: 700;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-}
-
-.navbar-light .navbar-brand {
-	color: #333;
-}
-
-a.navbar-brand i {
-	color: #03cce6;
-}
-
-.navbar-toggleable-md .navbar-nav .nav-link {
-	padding-right: 1.1em;
-	padding-left: 1.1em;
-	letter-spacing: 1px;
-}
-
-li.nav-item.active {
-	border-bottom: 2px solid #03cce6;
-	background: #e7e9ea;
-}
-
-.dropdown-item {
-	display: block;
+.header_top {
 	width: 100%;
-	padding: 0.25rem 1.5rem;
-	clear: both;
-	font-weight: 400;
-	color: #808890;
-	text-align: inherit;
-	white-space: nowrap;
-	background-color: transparent;
-	border: 0;
-	font-size: 0.9em;
+	background: #fff;
+	.navbar {
+		width: 92%;
+		margin: 0 auto;
+		padding: 0;
+		height: 126px;
+		z-index: 3000;
+		background: #fff;
+		text-align: center;
+		.navbar-nav {
+			margin: 0 auto;
+			.nav-item {
+				padding: 0 40px;
+				a {
+					font-size: 24px;
+					color: #323232;
+				}
+				&:nth-of-type(1) {
+					a {
+						color: #d85e6e;
+					}
+				}
+				&:nth-of-type(2) {
+					a {
+						color: #ba5594;
+					}
+				}
+				&:nth-of-type(3) {
+					a {
+						color: #acd7f3;
+					}
+				}
+				&:nth-of-type(4) {
+					a {
+						color: #b2cc41;
+					}
+				}
+			}
+		}
+		.nav-icon {
+			display: flex;
+			.nav-icon-item {
+				list-style: none;
+			}
+		}
+		.navbar-collapse {
+			background: #fff;
+		}
+	}
 }
-
-input.form-control.mr-sm-2.ser-ch {
-	margin-right: 0 !important;
-}
-
-.search input[type='search'] {
-	outline: none;
-	padding: 11px 15px;
-	font-size: 13px;
-	color: #777;
-	background: #f0f2f5;
-	width: 64%;
-	letter-spacing: 2px;
-	border: none;
-	border: 1px solid #ddd;
-	margin: 0;
-	border-radius: 0;
-}
-
-.search button[type='submit'] {
-	outline: none;
-	padding: 12px 17px;
-	font-size: 13px;
-	color: #fff;
-	background: #343638;
-	border: none;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	transition: 0.5s all;
-	margin: 0;
-	cursor: pointer;
-	font-weight: 600;
-	border-radius: 0px 6px 6px 0px;
-	-webkit-border-radius: 0px 6px 6px 0px;
-	-moz-border-radius: 0px 6px 6px 0px;
-	-o-border-radius: 0px 6px 6px 0px;
-	-ms-border-radius: 0px 6px 6px 0px;
-}
-
-.search button [type='submit']:hover {
-	background: #03cce6;
-}
-
-/*--//header --*/
-
-/*--/banner --*/
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -178,17 +129,24 @@ input.form-control.mr-sm-2.ser-ch {
 /* Since positioning the image, we need to help out the caption */
 
 .carousel-caption {
-	bottom: 11em;
 	z-index: 10;
-	text-align: center;
-	width: 59%;
+	text-align: left;
 	margin: 0 auto;
+	bottom: 14em;
+	span {
+		background: #f6d232;
+		font-size: 16px;
+		padding: 10px 20px;
+		margin-top: 5px;
+		display: inline-block;
+		cursor: pointer;
+	}
 }
 
 /* Declare heights because of positioning of img element */
 
 .carousel-item {
-	height: 42em;
+	height: 670px;
 	background-color: #777;
 }
 
@@ -243,10 +201,10 @@ input.form-control.mr-sm-2.ser-ch {
 /*--/slider--*/
 
 .carousel-item {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
+	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
+	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
+	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
+	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
 	background-size: cover;
 }
 
@@ -276,7 +234,7 @@ input.form-control.mr-sm-2.ser-ch {
 
 .carousel-caption h2,
 .carousel-caption h3 {
-	font-size: 4em;
+	font-size: 70px;
 	letter-spacing: 2px;
 	line-height: 1.4em;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
@@ -330,7 +288,181 @@ button.btn.btn-primary.play {
 }
 
 /*--//banner --*/
-
+/*产品图*/
+.home-product {
+	width: 98%;
+	margin: 40px auto;
+	display: flex;
+	.home-product-left,
+	.home-product-rigth {
+		width: 50%;
+		margin: 0 10px;
+		// height: 876px;
+		position: relative;
+		.home-product-left-img {
+			width: 100%;
+			height: 100%;
+			img {
+				width: 100%;
+				height: 100%;
+				display: block;
+			}
+		}
+		.home-product-left-text {
+			display: none;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background: #d85e6e;
+			opacity: 0.7;
+			padding-top: 70px;
+			padding-left: 70px;
+			p {
+				color: #fff;
+				font-family: SourceHanSansCN-Medium;
+				font-weight: 700;
+				&:nth-of-type(1) {
+					font-size: 15px;
+				}
+				&:nth-of-type(2) {
+					font-size: 36px;
+				}
+				&:nth-of-type(3) {
+					font-size: 16px;
+				}
+			}
+			span {
+				background: #ffffff;
+				border-radius: 5px;
+				font-size: 16px;
+				padding: 10px 20px;
+				margin-top: 5px;
+				color: #d85e6e;
+				font-weight: 700;
+				display: inline-block;
+				cursor: pointer;
+			}
+		}
+	}
+}
+.home-product-rigth-top,
+.home-product-rigth-bottom {
+	// height: 428px;
+	position: relative;
+	.home-product-rigth-img {
+		width: 100%;
+		height: 100%;
+		img {
+			width: 100%;
+			height: 100%;
+			display: block;
+		}
+	}
+	.home-product-rigth-text {
+		display: none;
+		width: 100%;
+		height: 100%;
+		z-index: 999;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: #f6d232;
+		opacity: 0.8;
+		padding-top: 70px;
+		padding-left: 70px;
+		p {
+			color: #fff;
+			font-family: SourceHanSansCN-Medium;
+			font-weight: 700;
+			&:nth-of-type(1) {
+				font-size: 15px;
+			}
+			&:nth-of-type(2) {
+				font-size: 36px;
+			}
+			&:nth-of-type(3) {
+				font-size: 16px;
+			}
+		}
+		span {
+			background: #ffffff;
+			border-radius: 5px;
+			font-size: 16px;
+			padding: 10px 20px;
+			margin-top: 5px;
+			color: #f6d232;
+			font-weight: 700;
+			display: inline-block;
+			cursor: pointer;
+		}
+	}
+}
+.home-product-rigth-bottom {
+	margin-top: 20px;
+	.home-product-rigth-text {
+		background-color: #b1cc41;
+		span {
+			color: #b1cc41;
+		}
+	}
+}
+/* video */
+.home-video {
+	width: 100%;
+	background: #e5e5e5;
+	.home-video-conent {
+		width: 98%;
+		margin: 0 auto;
+		display: flex;
+		justify-content: space-around;
+		.home-video-itme {
+			width: 33.3%;
+			margin: 40px 10px;
+			.home-video-mode-img {
+				width: 100%;
+				position: relative;
+				.home-video-mode {
+					border-radius: 10px;
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					top: 0;
+					left: 0;
+					background: rgba(0, 0, 0, 0.7);
+					cursor: pointer;
+					img {
+						width: 104px;
+						height: 60px;
+						z-index: 1000;
+						position: absolute;
+						top: 0;
+						left: 0;
+						right: 0;
+						bottom: 0;
+						margin: auto;
+					}
+				}
+				img {
+					width: 100%;
+					// height: 360px;
+					margin: 0 auto;
+					display: block;
+				}
+				&:hover {
+					transform: scale(1.01, 1.01);
+				}
+			}
+			span {
+				text-align: left;
+				margin-top: 20px;
+				display: inline-block;
+				cursor: pointer;
+			}
+		}
+	}
+}
 /*--/content --*/
 
 h3.tittle_w3ls {
@@ -425,14 +557,6 @@ h4.sub-tittle_w3ls {
 	margin: 1em 0;
 }
 
-/*--//banner-bottom --*/
-
-.left-img img {
-	width: 100%;
-}
-
-/*--//content --*/
-
 /*-- /services --*/
 
 .services {
@@ -476,203 +600,6 @@ h4.sub-tittle_w3ls {
 }
 
 /*-- //services --*/
-
-.style-grids_main {
-	margin: 0;
-}
-
-.style-image-2 {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background-size: cover;
-	min-height: 600px;
-}
-
-.style-image-2.second {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner5.jpg) no-repeat;
-	background-size: cover;
-	min-height: 600px;
-}
-
-.grid_sec_info {
-	padding: 8em 6em 6em 6em;
-	background: #f5f5f5;
-}
-
-.style-grid-2-text_info p {
-	margin: 2em 0;
-}
-
-.grid_sec_info h3 {
-	font-size: 1.6em;
-	line-height: 1.6em;
-}
-
-/*-- stats --*/
-
-.stats_left p {
-	font-size: 3em;
-	font-weight: 100;
-	letter-spacing: 1px;
-	color: #fff;
-	line-height: 2em;
-}
-
-.stats_left h4 {
-	font-size: 1.1em;
-	color: #f7f7f7;
-	margin: 0;
-	font-weight: 600;
-	letter-spacing: 1px;
-}
-
-.stats_left i {
-	font-size: 3em;
-	color: rgba(34, 34, 34, 0.45);
-	margin: 0;
-}
-
-.stats_bottom_grid_left img {
-	margin: 0 auto;
-}
-
-.stats_left.counter_grid {
-	background: #76daff;
-}
-
-.stats_left.counter_grid1 {
-	background: #ff3c41;
-}
-
-.stats_left.counter_grid2 {
-	background: #fcd000;
-}
-
-.stats_left.counter_grid3 {
-	background: #47cf73;
-}
-
-.stats_left {
-	text-align: center;
-	float: left;
-	width: 25%;
-	border: 1px solid rgba(49, 48, 48, 0.18);
-	padding: 4em 1em;
-	border-top: none;
-	border-bottom: none;
-}
-
-.stats_left:nth-child(3) {
-	border-right: 0px;
-}
-
-.stats_left:nth-child(2) {
-	border-left: 0px;
-	border-right: 0px;
-}
-
-/*--//about --*/
-
-/*--/Reviews--*/
-
-/*-- testimonials --*/
-
-.reviews_sec {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/test.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/test.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/test.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/test.jpg) no-repeat;
-	background-size: cover;
-	padding: 7em 0;
-	background-attachment: fixed;
-}
-
-.testimonials_grid {
-	text-align: center;
-	position: relative;
-}
-
-.testimonials_grid img {
-	margin: 0 auto;
-}
-
-.test_social_pos {
-	position: absolute;
-	top: 0%;
-	right: 38.5%;
-}
-
-.social_list1 li {
-	display: inline-block !important;
-}
-
-.test_social_pos li a {
-	color: #fff;
-	font-size: 0.9em;
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-	display: block;
-	line-height: 29px;
-}
-
-.facebook1 {
-	background: #3b5998;
-}
-
-.twitter2 {
-	background: #1da1f2;
-}
-
-.dribble3 {
-	background: #ea4c89;
-}
-
-.testimonials_grid {
-	text-align: center;
-}
-
-.testimonials_grid h3 {
-	margin: 1em 0 0.5em 0;
-	color: #fff;
-	font-size: 1.2em;
-}
-
-.testimonials_grid h3 span {
-	font-weight: 100;
-	font-size: 0.9em;
-}
-
-.testimonials_grid i {
-	font-size: 0.9em;
-	letter-spacing: 1px;
-	color: #f3f0f0;
-}
-
-.testimonials_grid p {
-	width: 70%;
-	margin: 1em auto 0;
-	color: #fff;
-	line-height: 2em;
-	letter-spacing: 1px;
-}
-
-.testimonials_grid img {
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	-ms-border-radius: 50%;
-	border: 5px solid rgba(255, 255, 255, 0.15);
-}
-
-.testimonials_grid {
-	margin: 0 auto;
-	width: 65%;
-}
-
-/*-- //testimonials --*/
-
-/*--responsive--*/
 
 @media (max-width: 900px) {
 }
@@ -950,10 +877,13 @@ button.btn1:hover {
 /*--footer--*/
 
 footer {
-	padding: 5em 0;
-	background-color: #0e0f10;
+	padding: 3em 0;
+	background-color: #212121;
 }
-
+.container-fluid {
+	width: 80%;
+	margin: 0 auto;
+}
 footer h3,
 footer h2 {
 	font-size: 1.3em;
@@ -997,56 +927,24 @@ footer ul li a:hover {
 footer ul li.hd {
 	color: #7dd7e2;
 }
-
-.newsletter .email {
-	background-color: #f4f4f4;
-	border: none;
-}
-
-.flickr-grid {
-	float: left;
-	width: 32%;
-	margin: 0 0.1em 0.2em;
-}
-
-.flickr-grid a img {
+.footer-bot {
 	width: 100%;
-	padding: 0.3em;
-	border: 1px solid #333333;
+	background: #181818;
+	.footer-bot-box {
+		width: 80%;
+		margin: 0 auto;
+		p {
+			font-size: 14px;
+			color: #fff;
+			text-align: center;
+			height: 40px;
+			line-height: 40px;
+			// &:nth-of-type(2){
+			// 	text-align: center;
+			// }
+		}
+	}
 }
-
-.newsletter .email {
-	outline: none;
-	padding: 13px 15px;
-	color: #fff;
-	font-size: 14px;
-	width: 80%;
-	background: rgba(0, 0, 0, 0.22);
-	border: 1px solid #2d2d2d;
-}
-
-.newsletter {
-	position: relative;
-	margin-top: 2em;
-}
-
-button.btn1 {
-	color: #fff;
-	border: none;
-	padding: 12px 0;
-	text-align: center;
-	text-decoration: none;
-	background: #03cce6;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	transition: 0.5s all;
-	float: right;
-	cursor: pointer;
-	width: 20%;
-}
-
 /*--//footer--*/
 
 /*--/copyright--*/
@@ -1315,6 +1213,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 800px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
 		font-size: 2.9em;
@@ -1327,6 +1228,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 768px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
 		font-size: 2.8em;
@@ -1351,6 +1255,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 767px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.banner-bottom,
 	.services,
 	.reviews_sec {
@@ -1376,6 +1283,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 736px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.carousel-caption {
 		bottom: 7em;
 		width: 74%;
@@ -1394,6 +1304,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 667px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
 		font-size: 2.6em;
@@ -1414,6 +1327,9 @@ a.facebook:hover {
 }
 
 @media (max-width: 640px) {
+	.home-video-itme {
+		width: 100%;
+	}
 	.carousel-caption {
 		bottom: 6em;
 		width: 77%;
@@ -1590,6 +1506,14 @@ a.facebook:hover {
 }
 
 @media (max-width: 375px) {
+	.home-video .home-video-conent .home-video-itme {
+		width: 100%;
+		margin: 0;
+	}
+	.home-video .home-video-conent {
+		display: flex;
+		flex-wrap: wrap;
+	}
 	.carousel-item {
 		height: 18em;
 	}
