--- a/src/include/header.html
+++ b/src/include/header.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="header_top" id="home">
 		<nav class="navbar navbar-expand-md navbar-dark">
-			<a class="navbar-brand" href="#"><img src="../static/images/home_nav_logo.png" ></a>
+			<a class="navbar-brand" href="#"><img src="static/images/home_nav_logo.png"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<i class="iconfont icongengduo" style="color: #000;"></i>
 			</button>
@@ -22,16 +22,16 @@
 				</ul>
 				<ul class="nav-icon cal-xs">
 					<li class="nav-icon-item">
-						<a href=""><img src="../static/images/home_nav_youtube.png" ></a>
+						<a href=""><img src="static/images/home_nav_youtube.png"></a>
 					</li>
 					<li class="nav-icon-item">
-						<a href=""><img src="../static/images/home_nav_facebook.png" ></a>
+						<a href=""><img src="static/images/home_nav_facebook.png"></a>
 					</li>
 					<li class="nav-icon-item">
-						<a href=""><img src="../static/images/home_nav_email.png" ></a>
+						<a href=""><img src="static/images/home_nav_email.png"></a>
 					</li>
 					<li class="nav-icon-item">
-						<a href=""><img src="../static/images/home_nav_phone.png" ></a>
+						<a href=""><img src="static/images/home_nav_phone.png"></a>
 					</li>
 				</ul>
 			</div>
