--- a/src/include/head.html
+++ b/src/include/head.html
@@ -9,16 +9,32 @@
 		<meta content="black" name="apple-mobile-web-app-status-bar-style">
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
-		<meta name="keywords" content="">
-		<meta name="description" content="">
+		<meta name="keywords" content="alilo,火火兔,huohuotu">
+		<meta name="description" content="alilo,火火兔,huohuotu">
 		<title>alilo</title>
 		<link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1249983_zu67fvhpr7l.css" />
-		<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"> -->
+		 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="static/css/main.css">
-		<link rel="stylesheet" type="text/css" href="static/css/video-js.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/aos.css" />
-		<link rel="stylesheet" type="text/css" href="static/css/aos-animation.css" />
-		<!-- <link rel="stylesheet" type="text/css" href="static/css/index.css" /> -->
+		<link rel="stylesheet" type="text/css" href="static/lib/css/video-js.css" />
+		<link rel="stylesheet" type="text/css" href="static/lib/css/aos.css" />
+		<link rel="stylesheet" type="text/css" href="static/lib/css/aos-animation.css" />
+		<script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
+		<script type="text/javascript">
+			//浏览器类型及版本
+			var DEFAULT_VERSION = 8.0;
+			var ua = navigator.userAgent.toLowerCase();
+			var isIE = ua.indexOf("msie") > -1;
+			var safariVersion;
+			if (isIE) {
+				safariVersion = ua.match(/msie ([\d.]+)/)[1];
+			}
+			if (safariVersion <= DEFAULT_VERSION) {
+				// 进行你所要的操作
+				alert('<div class="low_version">系统检测到您正在使用ie8以下内核的浏览器，不能实现完美体验，请及时更新浏览器版本！</div>');
+			};
+		</script>
 	</head>
 	<body>
