--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -1,54 +1,56 @@
 <!--footer-->
 <footer>
 	<div class="container-fluid">
-		<div class="row footer-top-w3layouts-agile">
-			<div class="col-lg-3 footer-grid" data-aos="zoom-in">
+		<div class="row footer-top-w3layouts-agile footer-nav">
+			<div class="footer-grid" data-aos="zoom-in">
 				<div class="footer-title">
-					<h2>ABOUT US</h2>
+					<input type="image" src="static/images/footer_logo.png" />
+				</div>
+			</div>
+			<div class="footer-grid" data-aos="zoom-in">
+				<div class="footer-title">
+					<h3>BRAND</h3>
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Company Profile</a></li>
-						<li><a href="">Company Culture</a></li>
-						<li><a href="">Company Honor</a></li>
-						<li><a href="">After-Sale Service</a></li>
+						<li><a href="">About Us</a></li>
+						<li><a href="">Milestone</a></li>
+						<li><a href="">Our Honor</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-3 footer-grid" data-aos="zoom-in">
+			<div class="footer-grid" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>PRODUCTS</h3>
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Classic Education Toy</a></li>
-						<li><a href="">Bluetooth Early Education Toy</a></li>
-						<li><a href="">Intelligent Interaction</a></li>
-						<li><a href="">Magnetic Blocks</a></li>
+						<li><a href="">Shake & tell rattles</a></li>
+						<li><a href="">Musical games</a></li>
+						<li><a href="">Music & Storyteller</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-3 footer-grid" data-aos="zoom-in">
+			<div class="footer-grid" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>VIDEO</h3>
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Baby Rattles - Smarty Shake&Tell </a></li>
-						<li><a href="">Alilo Big Bunny G7</a></li>
-						<li><a href="">Alilo V8 Cool Bunny</a></li>
-						<li><a href="">Alilo Smarty Shake and Tell Rattle R1</a></li>
+						<li><a href="">Smarty Shake&Tell</a></li>
+						<li><a href="">Music & Storyteller</a></li>
+						<li><a href="">STEM Robot</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-3 footer-grid" data-aos="zoom-in">
+			<div class="footer-grid" data-aos="zoom-in">
 				<div class="footer-title">
-					<h3>CONTACT USVIDEO</h3>
+					<h3>Follow  Us</h3>
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Tel:+86-755-86699250</a></li>
-						<li><a href="">Email:info@alilotoy.com</a></li>
+						<li id="faceHover"><a href=""><img src="static/images/footer_facebook_normal.png" ></a></li>
+						<li id="youtubeHover"><a href=""><img src="../static/images/footer_youtube_normal.png" ></a></li>
 					</ul>
 				</div>
 			</div>
@@ -57,7 +59,6 @@
 </footer>
 <div class="footer-bot">
 	<div class="footer-bot-box">
-		<p>Copyright © Alilo Digital Technology Co.Ltd. All Rights Reserved</p>
-		<p>sitemap | PrivacyPolicy</p>
+		<p>Copyright © Shenzhen Booyue Daily Necessities Co., Ltd. All Rights Reserved</p>
 	</div>
 </div>
