--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -2,6 +2,7 @@ html,
 body {
 	margin: 0;
 	font-size: 100%;
+	// font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 	background: #fff;
 }
@@ -46,10 +47,9 @@ h6 {
 p {
 	margin: 0;
 	font-size: 0.9em;
-	color: #777777;
+	color: #323232;
 	line-height: 2em;
 	letter-spacing: 1px;
-	font-weight: 300;
 }
 
 ul {
@@ -68,59 +68,71 @@ label {
 	overflow: hidden;
 }
 /*--/header --*/
-.header_top {
-	width: 100%;
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+	border: none;
+}
+.navbar {
+	width: 80%;
+	margin: 0 auto;
+	padding: 0;
+	height: 125px;
 	background: #fff;
-	.navbar {
-		width: 92%;
-		margin: 0 auto;
-		padding: 0;
-		height: 126px;
-		z-index: 3000;
-		background: #fff;
-		text-align: center;
+	z-index: 3000;
+	border: none;
+	.navbar-header {
+		border: none;
+		.navbar-brand {
+			height: 125px;
+			padding: 0;
+			margin: 0;
+			line-height: 125px;
+			img {
+				display: inline-block;
+				vertical-align: middle;
+			}
+		}
+	}
+	.container-fluid {
+		width: 100%;
+		height: 125px;
+		line-height: 125px;
+	}
+	.navbar-collapse {
 		.navbar-nav {
-			margin: 0 auto;
-			.nav-item {
-				padding: 0 40px;
+			background: #fff;
+			z-index: 3000;
+			li {
+				margin: 0;
 				a {
 					font-size: 24px;
-					color: #323232;
-				}
-				&:nth-of-type(1) {
-					a {
-						color: #d85e6e;
-					}
-				}
-				&:nth-of-type(2) {
-					a {
-						color: #ba5594;
-					}
-				}
-				&:nth-of-type(3) {
-					a {
-						color: #acd7f3;
-					}
-				}
-				&:nth-of-type(4) {
-					a {
-						color: #b2cc41;
-					}
+					color: #000;
+					line-height: inherit;
+					padding: 0 40px;
 				}
 			}
 		}
-		.nav-icon {
-			display: flex;
-			.nav-icon-item {
-				list-style: none;
+		.nav-tar {
+			margin: 0 auto;
+			display: inline-block;
+			text-align: center;
+			li {
+				padding: 0;
+				a {
+					padding: 0;
+				}
 			}
-		}
-		.navbar-collapse {
-			background: #fff;
 		}
 	}
 }
-
+.dropdown-menu{
+	padding: 5px 0 20px;
+	border: none;
+	p{
+		text-align: center;
+		padding-bottom: 10px;
+	}
+}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
@@ -130,14 +142,25 @@ label {
 
 .carousel-caption {
 	z-index: 10;
-	text-align: left;
 	margin: 0 auto;
-	bottom: 14em;
+	padding: 0;
+	text-align: left;
+	top: 45%;
+	left: 15%;
+	font-size: 10px;
+	h1 {
+		margin-top: 0.5em;
+		font-size: 5em;
+	}
+	h3 {
+		font-size: 3em;
+		color: #fcfcfc;
+	}
 	span {
 		background: #f6d232;
 		font-size: 16px;
 		padding: 10px 20px;
-		margin-top: 5px;
+		margin-top: 20px;
 		display: inline-block;
 		cursor: pointer;
 	}
@@ -198,48 +221,6 @@ label {
 	letter-spacing: -0.05rem;
 }
 
-/*--/slider--*/
-
-.carousel-item {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/home_banner_01.png) no-repeat;
-	background-size: cover;
-}
-
-.carousel-item.item2 {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background-size: cover;
-}
-
-.carousel-item.item3 {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner3.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner3.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner3.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner3.jpg) no-repeat;
-	background-size: cover;
-}
-
-.carousel-item.item4 {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
-	background-size: cover;
-}
-
-.carousel-caption h2,
-.carousel-caption h3 {
-	font-size: 70px;
-	letter-spacing: 2px;
-	line-height: 1.4em;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-}
-
 .carousel-indicators {
 	bottom: 17%;
 	left: 0%;
@@ -269,35 +250,19 @@ label {
 .carousel-indicators .active {
 	background: #03cce6;
 }
-
-/* Show it is fixed to the top */
-
-button.btn.btn-primary.play {
-	width: 90px;
-	height: 90px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	-ms-border-radius: 50%;
-	outline: none;
-	cursor: pointer;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-	background-color: #03cce6;
-	border: none;
-}
-
 /*--//banner --*/
 /*产品图*/
 .home-product {
 	width: 98%;
 	margin: 40px auto;
-	display: flex;
+	overflow: hidden;
+	display: table;
+	border-collapse: separate;
+	border-spacing: 20px;
 	.home-product-left,
 	.home-product-rigth {
 		width: 50%;
-		margin: 0 10px;
-		// height: 876px;
+		display: table-cell;
 		position: relative;
 		.home-product-left-img {
 			width: 100%;
@@ -369,6 +334,7 @@ button.btn.btn-primary.play {
 		top: 0;
 		left: 0;
 		background: #f6d232;
+		padding: 0 10px;
 		opacity: 0.8;
 		padding-top: 70px;
 		padding-left: 70px;
@@ -412,14 +378,15 @@ button.btn.btn-primary.play {
 .home-video {
 	width: 100%;
 	background: #e5e5e5;
+	overflow: hidden;
 	.home-video-conent {
-		width: 98%;
+		width: 100%;
 		margin: 0 auto;
-		display: flex;
-		justify-content: space-around;
+		display: table;
 		.home-video-itme {
-			width: 33.3%;
-			margin: 40px 10px;
+			width: 33.33333%;
+			display: table-cell;
+			padding: 40px 10px;
 			.home-video-mode-img {
 				width: 100%;
 				position: relative;
@@ -430,7 +397,7 @@ button.btn.btn-primary.play {
 					position: absolute;
 					top: 0;
 					left: 0;
-					background: rgba(0, 0, 0, 0.7);
+					background: rgba(0, 0, 0, 0.4);
 					cursor: pointer;
 					img {
 						width: 104px;
@@ -454,151 +421,129 @@ button.btn.btn-primary.play {
 					transform: scale(1.01, 1.01);
 				}
 			}
-			span {
+			p {
+				width: 100%;
+				color: #323232;
 				text-align: left;
 				margin-top: 20px;
-				display: inline-block;
 				cursor: pointer;
+				overflow: hidden;
 			}
 		}
 	}
 }
-/*--/content --*/
-
-h3.tittle_w3ls {
-	text-align: center;
-	font-size: 3em;
-	color: #2c363e;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
+/* --contact-- */
+.contact-top {
+	width: 100%;
+	height: 375px;
+	position: relative;
+	.contact-top-text {
+		position: absolute;
+		top: 30%;
+		left: 10%;
+		p {
+			font-size: 30px;
+			color: #ffffff;
+		}
+		h3{
+			font-size: 36px;
+			color: #ffffff;
+		}
+	}
 }
-
-h3.tittle_w3ls.cen {
-	color: #fff;
+.contact-main {
+	width: 100%;
+	margin: 40px 0;
+	display: table;
+	.contact-main-left,
+	.contact-main-rigth {
+		width: 50%;
+		display: table-cell;
+	}
+	.contact-main-left {
+		text-align: center;
+		.contact-main-input {
+			width: 475px;
+			margin: 0 auto;
+			p {
+				font-size: 16px;
+				color: #000;
+			}
+			.input-group {
+				width: 100%;
+				padding-top: 20px;
+				input {
+					height: 50px;
+					line-height: 50px;
+					border: solid 1px #67b8e9;
+				}
+			}
+			.input-textarea {
+				width: 100%;
+				resize: none;
+				height: 160px;
+			}
+			.input-btn {
+				width: 100%;
+				text-align: left;
+				span {
+					margin-top: 10px;
+					text-align: center;
+					display: inline-block;
+					background-color: #c3c3c3;
+					border-radius: 4px;
+					color: #ffffff;
+					font-size: 12px;
+					padding: 5px 20px;
+				}
+			}
+		}
+	}
+	.contact-main-rigth{
+		.contact-main-rigth-box{
+			width: 475px;
+			margin: 0 auto;
+			.tetle{
+				font-size: 24px;
+				color: #000;
+				font-weight: 700;
+			}
+			.contact-main-rigth-info{
+				padding-bottom: 40px;
+				.info{
+					padding: 5px 0;
+					span{
+						display: inline-block;
+						width: 70px;
+					}
+				}
+			}
+		}
+	}
 }
-
-.lead {
-	font-size: 1.1em;
-	font-weight: 300;
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+	color: #acd7f3;
+	background: #fff;
 }
-
-.featurette-heading {
-	font-size: 46px;
-	line-height: 1.4em;
+.contact-tab{
+	width: 80%;
+	margin: 40px auto;
+	a{
+		color: #666666;
+		border: none;
+	}
+	&:hover{
+		background: #fff;
+	}
 }
-
-/*--/banner-bottom --*/
-
-.banner-bottom {
-	padding: 6em 0;
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
+	background: #fff;
+	border:none;
+	color: #333333;
 }
-
-.bt-bottom-info h5 {
-	font-size: 2em;
-	line-height: 1.5em;
-	color: #03cce6;
-	margin-bottom: 4em;
-}
-
-.inner-sec-w3layouts-agileinfo {
-	margin-top: 4em;
-}
-
-.bottom-sub-grid {
-	text-align: center;
-	margin: 0 auto;
-}
-
-.bt-icon {
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	-ms-border-radius: 50%;
-	background: #03cce6;
-	text-align: center;
-	margin: 0 auto;
-}
-
-.bottom-sub-grid span {
-	font-size: 2em;
-	line-height: 3em;
-	color: #fff;
-	border-color: rgba(173, 173, 173, 0.45);
-}
-
-.bottom-sub-grid:hover a.btn.btn-secondary.view {
-	background: #03cce6;
-}
-
-a.btn.btn-secondary.view {
-	background: #333;
-	color: #fff;
-	margin-top: 2em;
-	font-size: 0.9em;
-	padding: 0.8em 1.5em;
-}
-
-.modal-body.video iframe {
+.nav-tabs{
 	border: none;
-	width: 100%;
-	min-height: 250px;
 }
-
-h5#exampleModalLabel {
-	font-size: 1.2em;
-}
-
-h4.sub-tittle_w3ls {
-	font-size: 1.2em;
-	color: #333;
-	letter-spacing: 1px;
-	margin: 1em 0;
-}
-
-/*-- /services --*/
-
-.services {
-	padding: 7em 0;
-}
-
-.icon_info h5 {
-	font-size: 1.2em;
-	color: #333;
-	margin: 1em 0;
-	font-weight: 600;
-}
-
-.icon_info {
-	text-align: center;
-}
-
-.icon_info {
-	text-align: left;
-	padding: 4em 2em;
-	border: 3px solid #f5f5f5;
-	background-color: #f5f5f5;
-	transition: all 0.3s ease-out 0s;
-}
-
-.grid_info_main.mid {
-	margin-top: 3em;
-}
-
-.grid_info_main i {
-	font-size: 2em;
-	color: #03cce6;
-}
-
-.grid_info.second {
-	margin-top: 1.5em;
-}
-
-.grid_info_main.mid img {
-	width: 100%;
-}
-
 /*-- //services --*/
 
 @media (max-width: 900px) {
@@ -614,6 +559,39 @@ h4.sub-tittle_w3ls {
 	.news-right h4,
 	.ab_info h4 {
 		font-size: 1.7em;
+	}
+	// 导航
+	.navbar-collapse {
+		width: 100%;
+		background: #fff;
+		z-index: 3000;
+		margin-top: 15%;
+	}
+	.navbar-toggle {
+		background: #fdd000;
+		margin-top: 50px;
+	}
+	.navbar .navbar-collapse .navbar-nav {
+		display: inline-block;
+		width: 100%;
+		li {
+			height: 50px;
+			line-height: 50px;
+		}
+	}
+	.nav-tar {
+		width: 100%;
+		li {
+			width: 25%;
+			float: left;
+			display: inline-block;
+			text-align: center;
+		}
+	}
+	.home-video .home-video-conent .home-video-itme span {
+		overflow: hidden;
+		display: inline-block;
+		width: 100%;
 	}
 }
 
@@ -936,12 +914,27 @@ footer ul li.hd {
 		p {
 			font-size: 14px;
 			color: #fff;
-			text-align: center;
+			text-align: left;
 			height: 40px;
 			line-height: 40px;
-			// &:nth-of-type(2){
-			// 	text-align: center;
-			// }
+		}
+	}
+}
+.footer-nav {
+	width: 100%;
+	display: table;
+	.footer-grid {
+		width: 20%;
+		display: table-cell;
+		text-align: left;
+		&:nth-of-type(5) {
+			.footer-list {
+				display: table;
+				li {
+					display: table-cell;
+					padding: 0 10px;
+				}
+			}
 		}
 	}
 }
@@ -1233,7 +1226,7 @@ a.facebook:hover {
 	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
-		font-size: 2.8em;
+		font-size: 1.8em;
 		letter-spacing: 1px;
 	}
 	.bt-bottom-info h5 {
@@ -1492,7 +1485,7 @@ a.facebook:hover {
 	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
-		font-size: 1.4em;
+		font-size: 1em;
 		letter-spacing: 1px;
 	}
 	.nav-link {
@@ -1523,8 +1516,12 @@ a.facebook:hover {
 		padding: 2em 0;
 	}
 	.carousel-caption {
-		bottom: 4em;
 		width: 75%;
+	}
+	.carousel-caption span {
+		font-size: 12px;
+		padding: 3px 6px;
+		margin-top: 10px;
 	}
 	.search input[type='search'] {
 		width: 62%;
