--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -4,7 +4,7 @@
 		<div class="row footer-top-w3layouts-agile footer-nav">
 			<div class="footer-grid" data-aos="zoom-in">
 				<div class="footer-title">
-					<input type="image" src="static/images/footer_logo.png" />
+					<a href="index.html"><img src="static/images/footer_logo.png" ></a>
 				</div>
 			</div>
 			<div class="footer-grid" data-aos="zoom-in">
@@ -13,9 +13,9 @@
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">About Us</a></li>
-						<li><a href="">Milestone</a></li>
-						<li><a href="">Our Honor</a></li>
+						<li><a href="brand.html?type=0">About Us</a></li>
+						<li><a href="brand.html?type=1">Milestone</a></li>
+						<li><a href="brand.html?type=2">Our Honor</a></li>
 					</ul>
 				</div>
 			</div>
@@ -25,9 +25,9 @@
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Shake & tell rattles</a></li>
-						<li><a href="">Musical games</a></li>
-						<li><a href="">Music & Storyteller</a></li>
+						<li><a href="products.html?type=A&link=skills">Shake & tell rattles</a></li>
+						<li><a href="products.html?type=B&link=skills">Musical games</a></li>
+						<li><a href="products.html?type=C&link=skills">Music & Storyteller</a></li>
 					</ul>
 				</div>
 			</div>
@@ -37,9 +37,9 @@
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li><a href="">Smarty Shake&Tell</a></li>
-						<li><a href="">Music & Storyteller</a></li>
-						<li><a href="">STEM Robot</a></li>
+						<li><a href="products.html?type=D&link=skills">Smarty Shake&Tell</a></li>
+						<li><a href="products.html?type=E&link=skills">Music & Storyteller</a></li>
+						<li><a href="products.html?type=F&link=skills">STEM Robot</a></li>
 					</ul>
 				</div>
 			</div>
@@ -49,8 +49,8 @@
 				</div>
 				<div class="footer-list">
 					<ul>
-						<li id="faceHover"><a href=""><img src="static/images/footer_facebook_normal.png" ></a></li>
-						<li id="youtubeHover"><a href=""><img src="../static/images/footer_youtube_normal.png" ></a></li>
+						<li id="faceHover" onclick="window.open('https://www.facebook.com/booyue.alilo?ref=bookmarks','_blank')"><a href="javascript:void(0);"><img src="static/images/footer_facebook_normal.png" ></a></li>
+						<li id="youtubeHover" onclick="window.open('https://www.youtube.com/channel/UCTwhEYa162t-5Ibm3C4suog','_blank')"><a href="javascript:void(0);"><img src="../static/images/footer_youtube_normal.png" ></a></li>
 					</ul>
 				</div>
 			</div>
