--- a/src/include/head.html
+++ b/src/include/head.html
@@ -20,7 +20,6 @@
 		<link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1249983_zu67fvhpr7l.css" />
 		<link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-		 <!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="static/css/main.css">
 		<link rel="stylesheet" type="text/css" href="./static/lib/css/video-js.css" />
 		<link rel="stylesheet" type="text/css" href="./static/lib/css/aos.css" />
@@ -41,7 +40,7 @@
 			if (safariVersion <= DEFAULT_VERSION) {
 				// 进行你所要的操作
 				alert('<div class="low_version">系统检测到您正在使用ie8以下内核的浏览器，不能实现完美体验，请及时更新浏览器版本！</div>');
-				return;
+				// return;
 			};
 		</script>
 	</head>
