--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	font-size: 100%;
 	// font-size: 10px;
-	// font-family: 'Poppins', sans-serif;
+	// font-family: 'ArialMT', sans-serif;
 	background: #fff;
 }
 
@@ -15,7 +15,13 @@ body a {
 	-o-transition: 0.5s all;
 	-ms-transition: 0.5s all;
 }
-
+a:link{text-decoration:none; cursor:pointer;}
+ 
+a:visited{text-decoration:overline; cursor:pointer}
+ 
+a:active{text-decoration:overline; cursor:pointer}
+ 
+a:hover{text-decoration:overline; cursor:pointer}
 a:hover {
 	text-decoration: none;
 }
@@ -142,27 +148,34 @@ label {
 
 .carousel-caption {
 	z-index: 10;
+	width: 70%;
 	margin: 0 auto;
 	padding: 0;
 	text-align: left;
-	top: 45%;
-	left: 15%;
-	font-size: 10px;
+	top: 50%;
+	left: 50%;
+	bottom:inherit;
+	-webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 	h1 {
 		margin-top: 0.5em;
-		font-size: 5em;
+		font-size: 60px;
 	}
 	h3 {
-		font-size: 3em;
+		font-size: 30px;
 		color: #fcfcfc;
 	}
 	span {
 		background: #f6d232;
-		font-size: 16px;
+		font-size: 14px;
 		padding: 10px 20px;
-		margin-top: 20px;
+		margin-top: 50px;
 		display: inline-block;
 		cursor: pointer;
+		a{
+			color: #fff;
+		}
 	}
 }
 
@@ -336,7 +349,7 @@ label {
 		background: #f6d232;
 		padding: 0 10px;
 		opacity: 0.8;
-		padding-top: 70px;
+		padding-top: 50px;
 		padding-left: 70px;
 		p {
 			color: #fff;
@@ -437,28 +450,32 @@ label {
 	width: 100%;
 	height: 375px;
 	position: relative;
+	text-align: center;
 	.contact-top-text {
+		width: 80%;
+		margin: 0 auto;
 		position: absolute;
-		top: 30%;
-		left: 10%;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%,-50%);
 		p {
-			font-size: 30px;
+			font-size: 24px;
 			color: #ffffff;
+			text-align: left;
 		}
 		h3 {
 			font-size: 36px;
 			color: #ffffff;
+			text-align: left;
 		}
 	}
 }
 .contact-main {
 	width: 100%;
 	margin: 40px 0;
-	display: table;
 	.contact-main-left,
 	.contact-main-rigth {
-		width: 50%;
-		display: table-cell;
+		
 	}
 	.contact-main-left {
 		text-align: center;
@@ -535,7 +552,7 @@ label {
 		border: none;
 		cursor: pointer;
 	}
-	&:hover {
+	&:hover{
 		background: #fff;
 	}
 }
@@ -572,7 +589,7 @@ label {
 				padding-bottom: 30px;
 			}
 			h4 {
-				margin-top: 64px;
+				margin-top: 44px;
 			}
 			p {
 				font-size: 16px;
@@ -596,7 +613,7 @@ label {
 		width: 100%;
 		margin: 100px auto 0;
 		text-align: center;
-		overflow: auto;
+		overflow: hidden;
 		li {
 			list-style: none;
 			h4 {
@@ -775,9 +792,10 @@ label {
 		position: relative;
 		.details-text-box {
 			position: absolute;
-			top: 5%;
+			top: 10%;
 			left: 10%;
 			h3 {
+				padding-top: 20px;
 				padding-bottom: 40px;
 			}
 		}
@@ -819,6 +837,10 @@ label {
 	.ab_info h4 {
 		font-size: 1.7em;
 	}
+	//底部
+	.footer-nav .footer-grid{
+		width: 50%;
+	}
 	// 导航
 	.navbar-collapse {
 		width: 100%;
@@ -829,14 +851,6 @@ label {
 	.navbar-toggle {
 		background: #fdd000;
 		margin-top: 50px;
-	}
-	.navbar .navbar-collapse .navbar-nav {
-		display: inline-block;
-		width: 100%;
-		li {
-			height: 50px;
-			line-height: 50px;
-		}
 	}
 	.nav-tar {
 		width: 100%;
@@ -868,223 +882,6 @@ label {
 	}
 	.stats_left:nth-child(3) {
 		border-bottom: 0px;
-	}
-}
-
-/*--//content --*/
-
-/*--about--*/
-
-.banner-inner {
-	background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
-	background-size: cover;
-	min-height: 250px;
-}
-
-li.breadcrumb-item {
-	font-size: 0.9em;
-	letter-spacing: 1px;
-}
-
-li.breadcrumb-item a {
-	color: #333;
-}
-
-.breadcrumb-item.active {
-	color: #03cce6;
-}
-
-.bt-bottom-info.ab img {
-	width: 100%;
-}
-
-p.ab-para {
-	margin: 2em 0 3em 0;
-}
-
-/*--//about--*/
-
-/*-- gallery --*/
-
-.section_1_gallery_grid {
-	margin-top: 1em;
-}
-
-.w3_section_1_gallery_grid {
-	padding: 0 8px;
-}
-
-.section_1_gallery_grid1 {
-	position: relative;
-	background: #edf3f3;
-	padding: 6px;
-}
-
-.proj_gallery_grid1_pos {
-	background: rgba(14, 15, 16, 0.59);
-	bottom: 23px;
-	left: 30px;
-	opacity: 0;
-	padding: 1em;
-	position: absolute;
-	right: 30px;
-	text-align: center;
-	visibility: hidden;
-	-webkit-transform: scaleX(-1);
-	transform: scaleX(-1);
-	-moz-transform: scaleX(-1);
-	-o-transform: scaleX(-1);
-	-ms-transform: scaleX(-1);
-	-webkit-transition: all 0.8s ease;
-	transition: all 0.8s ease;
-}
-
-.proj_gallery_grid1_pos h3 {
-	font-size: 1.3em;
-	letter-spacing: 2px;
-	font-weight: 600;
-	position: relative;
-	color: #fff;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-}
-
-.proj_gallery_grid1_pos p {
-	color: #fff;
-	letter-spacing: 1px;
-	font-size: 14px;
-}
-
-.section_1_gallery_grid:hover .proj_gallery_grid1_pos {
-	opacity: 1;
-	visibility: visible;
-	-webkit-transform: scaleX(1);
-	transform: scaleX(1);
-	-moz-transform: scaleX(1);
-	-o-transform: scaleX(1);
-	-ms-transform: scaleX(1);
-}
-
-.banner-bottom.gallery {
-	padding: 5em 0;
-}
-
-p.quia {
-	font-size: 1.2em;
-	color: #140b05;
-	font-weight: 600;
-	text-align: center;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-}
-
-.proj_gallery_grid img {
-	width: 100%;
-}
-
-/*-- //gallery --*/
-
-/*-- /error --*/
-
-.error-404 h4 {
-	font-size: 12em;
-	font-weight: 600;
-	color: #333;
-	margin: 0;
-	padding: 0;
-}
-
-a.b-home {
-	background: #202020;
-	padding: 0.7em 1.5em;
-	display: inline-block;
-	color: #fff;
-	text-decoration: none;
-	margin-top: 1em;
-	font-size: 0.9em;
-}
-
-a.b-home:hover {
-	background: #03cce6;
-}
-
-.error-404 p {
-	color: #929090;
-	font-size: 1em;
-	letter-spacing: 8px;
-	margin: 0em 0 2em 0;
-}
-
-.error.social-icons {
-	margin-bottom: 1em;
-}
-
-.error.social-icons a {
-	color: #4e4e4e;
-}
-
-.error.social-icons a:hover {
-	color: #ff3c41;
-}
-
-.error-404 {
-	text-align: center;
-}
-
-.error-404 form {
-	margin: 0 auto 2em;
-	width: 40%;
-	text-align: center;
-}
-
-.error-404 form input[type='search'] {
-	outline: none;
-	border: 1px solid #c4c5c5;
-	background: none;
-	color: #212121;
-	padding: 14px 15px;
-	width: 80%;
-	float: left;
-	font-size: 12px;
-	letter-spacing: 5px;
-}
-
-button.btn1 {
-	color: #fff;
-	border: none;
-	padding: 12px 0;
-	text-align: center;
-	text-decoration: none;
-	background: #ff3c41;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	transition: 0.5s all;
-	float: right;
-	width: 20%;
-}
-
-button.btn1:hover {
-	background: #03cce6;
-}
-
-.error ul li {
-	list-style: none;
-	display: inline-block;
-}
-
-.error ul li a {
-	color: #555;
-	margin: 0 5px;
-	font-size: 0.9em;
-}
-
-@media (max-width: 640px) {
-	.error-404 h4 {
-		font-size: 9em;
 	}
 }
 
@@ -1181,11 +978,11 @@ footer ul li.hd {
 }
 .footer-nav {
 	width: 100%;
-	display: table;
+	// display: table;
 	.footer-grid {
-		width: 20%;
-		display: table-cell;
-		text-align: left;
+		// width: 20%;
+		// display: table-cell;
+		// text-align: left;
 		&:nth-of-type(5) {
 			.footer-list {
 				display: table;
@@ -1198,74 +995,6 @@ footer ul li.hd {
 	}
 }
 /*--//footer--*/
-
-/*--/copyright--*/
-
-.copyright ul li {
-	display: inline-block;
-	padding: 0 10px;
-}
-
-a.facebook {
-	color: #fff;
-	font-size: 16px;
-}
-
-a.facebook:hover {
-	color: #03cce6;
-}
-
-.copyrighttop {
-	float: right;
-}
-
-.copyrightbottom {
-	float: left;
-}
-
-.copyright {
-	background: #141415;
-	color: #fff;
-	padding: 1em 0;
-	border-top: 1px solid rgba(25, 24, 24, 0.58);
-}
-
-.copyrightbottom p {
-	color: #fff;
-	letter-spacing: 1px;
-	font-size: 14px;
-	line-height: 28px;
-}
-
-.copyrightbottom a {
-	color: #8cbbc1;
-	text-decoration: none;
-}
-
-.copyrightbottom a:hover {
-	color: #fff;
-}
-
-.copyrighttop h4 {
-	font-size: 0.95em;
-}
-
-#toTop {
-	display: none;
-	text-decoration: none;
-	position: fixed;
-	bottom: 10px;
-	right: 10px;
-	overflow: hidden;
-	width: 48px;
-	height: 48px;
-	border: none;
-	text-indent: 100%;
-	background: url(../images/top_up.png) no-repeat 0px 0px;
-}
-
-/*--// copyright-- */
-
 /*--responsive--*/
 
 @media (max-width: 1440px) {
@@ -1315,6 +1044,9 @@ a.facebook:hover {
 	}
 	.grid_sec_info {
 		padding: 6em 4em 4em 4em;
+	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 20px;
 	}
 }
 
@@ -1376,6 +1108,9 @@ a.facebook:hover {
 	.proj_gallery_grid1_pos h3 {
 		font-size: 1em;
 	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 20px;
+	}
 }
 
 @media (max-width: 1024px) {
@@ -1406,6 +1141,9 @@ a.facebook:hover {
 	}
 	.grid_sec_info {
 		padding: 4em 2em 2em 2em;
+	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 20px;
 	}
 }
 
@@ -1438,6 +1176,9 @@ a.facebook:hover {
 		font-size: 1.8em;
 		width: 50%;
 	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 20px;
+	}
 }
 
 @media (max-width: 900px) {
@@ -1462,6 +1203,9 @@ a.facebook:hover {
 		top: 0%;
 		right: 28%;
 	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 10px;
+	}
 }
 
 @media (max-width: 800px) {
@@ -1477,11 +1221,17 @@ a.facebook:hover {
 		width: 100%;
 		margin: 1em auto 0;
 	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 10px;
+	}
 }
 
 @media (max-width: 768px) {
 	.home-video-itme {
 		width: 100%;
+	}
+	.navbar .navbar-collapse .navbar-nav a{
+		padding: 0 20px;
 	}
 	.carousel-caption h2,
 	.carousel-caption h3 {
@@ -1503,6 +1253,9 @@ a.facebook:hover {
 	}
 	.bottom-sub-grid {
 		margin: 1em 0;
+	}
+	.navbar .navbar-collapse .navbar-nav>li>a {
+		padding: 0 10px;
 	}
 }
 
