--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -2,12 +2,12 @@
 <footer>
 	<div class="container-fluid">
 		<div class="row footer-top-w3layouts-agile footer-nav">
-			<div class="footer-grid" data-aos="zoom-in">
+			<div class="footer-grid col-lg-4 col-md-4 col-sm-6 col-xs-6" data-aos="zoom-in">
 				<div class="footer-title">
 					<a href="index.html"><img src="static/images/footer_logo.png" ></a>
 				</div>
 			</div>
-			<div class="footer-grid" data-aos="zoom-in">
+			<div class="footer-grid col-lg-2 col-md-4 col-sm-6 col-xs-6" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>BRAND</h3>
 				</div>
@@ -19,7 +19,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="footer-grid" data-aos="zoom-in">
+			<div class="footer-grid col-lg-2 col-md-4 col-sm-6 col-xs-6" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>PRODUCTS</h3>
 				</div>
@@ -31,7 +31,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="footer-grid" data-aos="zoom-in">
+			<div class="footer-grid col-lg-2 col-md-4 col-sm-6 col-xs-6" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>VIDEO</h3>
 				</div>
@@ -43,14 +43,14 @@
 					</ul>
 				</div>
 			</div>
-			<div class="footer-grid" data-aos="zoom-in">
+			<div class="footer-grid col-lg-2 col-md-4 col-sm-6 col-xs-6" data-aos="zoom-in">
 				<div class="footer-title">
 					<h3>Follow  Us</h3>
 				</div>
 				<div class="footer-list">
 					<ul>
 						<li id="faceHover" onclick="window.open('https://www.facebook.com/booyue.alilo?ref=bookmarks','_blank')"><a href="javascript:void(0);"><img src="static/images/footer_facebook_normal.png" ></a></li>
-						<li id="youtubeHover" onclick="window.open('https://www.youtube.com/channel/UCTwhEYa162t-5Ibm3C4suog','_blank')"><a href="javascript:void(0);"><img src="../static/images/footer_youtube_normal.png" ></a></li>
+						<li id="youtubeHover" onclick="window.open('https://www.youtube.com/channel/UCTwhEYa162t-5Ibm3C4suog','_blank')"><a href="javascript:void(0);"><img src="static/images/footer_youtube_normal.png" ></a></li>
 					</ul>
 				</div>
 			</div>
