--- a/src/include/header.html
+++ b/src/include/header.html
@@ -21,13 +21,12 @@
 								<a class="page-scroll" href="index.html" style="color: #d85e6e;">Home</a>
 							</li>
 							<li>
-								<a class="page-scroll" href="javascript(0)" id="navProducts" role="button" data-toggle="dropdown" aria-haspopup="true"
-								 aria-expanded="false" style="color: #ba5594;">Products</a>
-								<div class="dropdown-menu" ria-labelledby="navProducts" style="width: 400px;right: inherit;margin-top: -10px;">
+								<a class="page-scroll" href="products.html" id="navProducts" style="color: #ba5594;">Products</a>
+								<div class="dropdown-menu"  id="producMenu" ria-labelledby="navProducts" style="width: 400px;right: inherit;margin-top: -10px;">
 									<div class="dropdown-products">				
 										<div class="age">
 											<p class="dropdown-icon"><img src="static/images/nav_arrow_02.png"></p>
-											<h3 style="margin: 30px 40px;">Age</h3>
+											<h3 style="margin: 0px 40px 20px;">Age</h3>
 											<a class="dropdown-item" href="products.html?type=2&link=age" style="font-size: 14px;margin: 0;height: 30px;line-height:30px;display: block;padding: 0;text-align: left;color: #292929;margin: 0px 40px;">0
 												- 2 years
 											</a>
@@ -40,7 +39,7 @@
 										</div>
 										<div class="skills">
 											<p><img src=""></p>
-											<h3 style="margin: 30px 10px;">Skills</h3>
+											<h3 style="margin: 0px 10px 20px;text-align: left;">Skills</h3>
 											<a class="dropdown-item" href="products.html?type=A&link=skills" style="font-size: 14px;margin: 0;height: 30px;line-height:30px;display: block;padding: 0;text-align: left;color: #292929;margin: 0px 10px;">Shake
 												& tell rattles
 											</a>
@@ -66,11 +65,10 @@
 								<a class="page-scroll" href="index.html" style="color: #acd7f3;">Brand</a>
 							</li> -->
 							<li class="nav-item dropdown">
-								<a class="page-scroll" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-								 aria-expanded="false" style="color: #acd7f3;">
+								<a class="page-scroll" href="brand.html" id="navbarDropdown" style="color: #acd7f3;">
 									Brand
 								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-top: -10px;">
+								<div class="dropdown-menu" id="barndMenu" style="margin-top: -10px;">
 									<p><img src="static/images/nav_arrow_03.png"></p>
 									<a class="dropdown-item" href="brand.html?type=0" style="font-size: 14px;margin: 0;height: 30px;line-height:30px;display: block;padding: 0;text-align: center;color: #292929;">About
 										Us</a>
