--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -160,7 +160,7 @@ label {
     transform: translate(-50%, -50%);
 	h1 {
 		margin-top: 0.5em;
-		font-size: 60px;
+		font-size: 50px;
 	}
 	h3 {
 		font-size: 30px;
@@ -310,6 +310,9 @@ label {
 				&:nth-of-type(3) {
 					font-size: 16px;
 				}
+			}
+			h1{
+				color: #fff;
 			}
 			span {
 				background: #ffffff;
@@ -759,10 +762,14 @@ label {
 			p {
 				color: #333333;
 				font-size: 16px;
+				&:hover {
+					color: #67b8e9;
+				}
 			}
 			&:hover {
 				border: 1px #67b8e9 solid;
-				transform: scale(1.01, 1.01) p {
+				transform: scale(1.01, 1.01);
+				p{
 					color: #67b8e9;
 				}
 			}
